# hla_algorithm

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint.yml  Pipfile  README.md  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  install_instant_client.bash
.github/workflows/: build_and_publish_gem.yml  python.yml  test.yml
original_ruby_scripts/: 01.5_hla_reduce_by_g.rb  01_hla_fasta_parse.rb  _generate_hla_reports.rb  cfe_scripts_cfe_helper_diff.txt  hla.rb  hla_a_seq.ctl  hla_algorithm_mid_modification.rb  hla_b_seq.ctl  hla_c_seq.ctl
ruby/: hla_algorithm.gemspec
ruby/lib/: hla_algorithm.rb
src/: debug_entrypoint.py
src/django_app/: manage.py
src/django_app/hla_typing/: apps.py  models.py
src/django_app/hla_typing_site/: asgi.py  settings.py  urls.py  wsgi.py
src/easyhla/: __init__.py  bblab.py  bblab_lib.py  check_date_modified.py  clinical_hla.py  clinical_hla_lib.py  easyhla.py  entrypoint.py  formatting.py  hla_a_seq.csv  hla_algorithm.rb  hla_b_seq.csv  hla_c_seq.csv  hla_c_std.csv  hla_easy.py  interpret.py  interpret_from_json.py  interpret_from_json_lib.py  models.py  ruby_adaptor_lib.py  update_alleles.py  update_frequency_file.py  update_frequency_file_lib.py  utils.py
src/easyhla/default_data/: hla_a_std_reduced.csv  hla_b_std.csv  hla_frequencies.csv  hla_nuc_v3.60.0-alpha.fasta.checksum.txt
src/easyhla/default_data/bblab_config/: hla_a_std.csv  hla_b_std_reduced.csv  hla_c_std_reduced.csv  hla_nuc.fasta.mtime
src/hla_algorithm/: __main__.py  bblab.py  hla_algorithm.py  interpret_from_json.py  interpret_from_json_lib.py  models.py  update_alleles.py  update_frequency_file.py  update_frequency_file_lib.py  utils.py
src/hla_algorithm/default_data/: hla_frequencies.csv
src/scripts/: bblab.py  check_date_modified.py  clinical_hla.py  data_parse.py  examine_old_frequencies.r  hla_algorithm_adaptor.py  manual_comparison.py  ruby_adaptor.py  update_alleles.py  update_frequency_file.py
tests/: bblab_lib_test.py  bblab_lib_tests.py  clinical_hla_lib_test.py  conftest.py  data_parse.py  easyhla_test.py  hla_algorithm_test.py  interpret_from_json_lib_test.py  manual_comparison.py  models_test.py  ruby_adaptor_lib_test.py  update_frequency_file_lib_test.py  utils_test.py
tests/input/: test.fasta
tests/output/: hla-c-output.csv
tools/: bblab.py  check_date_modified.py  clinical_hla.py  data_parse.py  manual_comparison.py  update_alleles.py
