[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easyhla"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Rosemary ?", email = "retired@bccfe.ca" },
  { name = "David Rickett", email = "drickett@bccfe.ca" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "biopython",
  "pydantic",
  "pydantic-numpy",
  "typer",
  "pytz",
  "numpy"
]

dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/easyhla#readme"
Issues = "https://github.com/unknown/easyhla/issues"
Source = "https://github.com/unknown/easyhla"

[tool.hatch.version]
path = "src/easyhla/__about__.py"

[tool.hatch.build]
include = [
  "src/easyhla/*.py",
  "src/easyhla/*.csv",
  "src/easyhla/hla_nuc.fasta.mtime",
]
exclude = [
  "src/easyhla/check_date_modified.py",
]
skip-excluded-dirs = true
directory = "output"

[tool.hatch.envs.default]
dependencies = [
  "biopython",
  "pydantic",
  "pydantic-numpy",
  "typer",
  "pytz",
  "numpy"
]

[tool.hatch.envs.test]
template = "default"
extra-dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-html",
  "pytest-mock",
]

[tool.hatch.envs.dev]
template = "test"
extra-dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-html",
  "pytest-mock",
  "black",
  "mypy-extensions"
]

[tool.hatch.envs.test.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/easyhla --cov=tests {args}"
cov-report = "pytest --cov-report xml --cov-config=pyproject.toml --cov=src/easyhla --cov=tests {args}"
ci-report = "pytest --junitxml=unit_test.xml --cov-report xml:coverage.xml --cov-report term --cov-config=pyproject.toml --cov=src/easyhla --cov=tests {args}"
full-report = "pytest --junitxml=unit_test.xml --html=easyhla_test_report.html --self-contained-html --cov-report xml:coverage.xml --cov-report term --cov-report html --cov-config=pyproject.toml --cov=src/easyhla --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov --cov-report xml --strict-markers -m 'not slow'"
testpaths = [
    "tests",
]
markers = [
  "integration: Run integration tests",
  "slow: Run integration tests that take a really long time",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/easyhla/__init__.py",
  "src/easyhla/__about__.py",
  "src/easyhla/check_date_modified.py",
  "tests/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
