[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easyhla"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Rosemary McCloskey", email = "retired@bccfe.ca" },
  { name = "David Rickett", email = "drickett@bccfe.ca" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = ["version"]
dependencies = [
  "biopython>=1.85",
  "numpy>=2.2.3",
  "pydantic>=2.10.6",
  "pydantic-numpy>=8.0.1",
  "pytz>=2025.1",
  "requests>=2.32.3",
  "typer>=0.15.2",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "mypy-extensions>=1.0.0",
  "oracledb>=3.1.0",
  "pandas>=2.2.3",
  "pandas-stubs>=2.2.3.241126",
  "pre-commit>=4.1.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
  "pytest-mock>=3.14.0",
  "pytest-xdist>=3.6.1",
  "ruff>=0.9.9",
  "sqlalchemy>=2.0.40",
  "types-pytz>=2025.1.0.20250204",
]

[project.urls]
Documentation = "https://github.com/unknown/easyhla#readme"
Issues = "https://github.com/unknown/easyhla/issues"
Source = "https://github.com/unknown/easyhla"

[project.scripts]
clinical_hla = "easyhla.clinical_hla:main"
interpret_from_json = "easyhla.interpret_from_json:main"
bblab = "easyhla.bblab:main"

[project.optional-dependencies]
database = [
    "oracledb>=3.1.0",
    "sqlalchemy>=2.0.40",
]

[tool.hatch.version]
path = "src/easyhla/__about__.py"

[tool.hatch.build]
include = [
  "src/easyhla/*.py",
  "src/easyhla/default_data/*.csv",
  "src/easyhla/hla_nuc.fasta.mtime",
]
exclude = [
  "tools",
  "tests/output",
  "tests/input",
]
skip-excluded-dirs = true
directory = "output"

[tool.hatch.build.targets.wheel]
packages = ["src/easyhla"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = "src"
minversion = "6.0"
addopts = "-ra -n 4 --cov --cov-report term --cov-report xml --strict-markers -m 'not slow'"
testpaths = ["tests"]
markers = [
  "integration: Run integration tests",
  "slow: Run integration tests that take a really long time",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]
omit = [
  "src/easyhla/__init__.py",
  "src/easyhla/__about__.py",
  "src/easyhla/__main__.py",
  "tests/__init__.py",
  "src/easyhla/bblab.py",
  "src/easyhla/clinical_hla.py",
  "src/easyhla/interpret_from_json.py",
  "src/scripts/*.py",
]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
skip_empty = true

[tool.coverage.xml]
output = 'coverage.xml'

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C"]
# ignore warnings where `== True` occurs, because we're using a lot of pandas
# https://www.flake8rules.com/rules/E712.html
ignore = ["E712"]


[tool.pydocstyle]
match = "src/**/*.py"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
ignore_missing_imports = true
